[package]
name = "containerd-rshim"
version = "0.1.0"
authors = ["Chen Bin <chen.bin11@zte.com.cn>"]
edition = "2018"

[profile.release]
codegen-units = 1
lto = true
debug = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protocols = { path = "protocols" }
rust-runc = { path = "rust-runc" }
oci-spec = { path = "oci-spec" }

ttrpc = "0.4.7"
protobuf = "2.17.0"
libc = "0.2.80"
nix = "0.18.0"
prctl = "1.0.0"
serde_json = "1.0.57"
log = { version = "0.4", features = ["std"]}
chrono = "0.4.13"
termios = "0.3.2"
mio = "0.6.20"
machine = "0.3"
anyhow = "1.0.34"
backtrace = "0.3.50"
